--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>銀髮毛孩守護站 - 專業老犬照顧與健康指南</title>
+    <meta name="description" content="專為高齡犬設計的照顧指南。提供老狗關節保養、飲食建議、失智症狀評估與居家護理知識。陪伴您的毛孩健康慢老，提升生活品質。">
     <meta name="google-site-verification" content="CV91AU-7ksUot-SeRXUVsZT6CbHioysnupDkCN9aaJM">
+    
     <link rel="canonical" href="https://www.yourwebsite.com/">
     <link rel="stylesheet" href="css/style.css">
     
@@ -75,3 +77,4 @@
 </body>
 
 </html>
+
