Update meta tags and URLs in index.html
Added Open Graph image meta tag and updated website URLs.

--- a/index.html
+++ b/index.html
@@ -5,21 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>銀髮毛孩守護站 - 專業老犬照顧與健康指南</title>
     <meta name="description" content="專為高齡犬設計的照顧指南。提供老狗關節保養、飲食建議、失智症狀評估與居家護理知識。陪伴您的毛孩健康慢老，提升生活品質。">
-    <meta name="google-site-verification" content="CV91AU-7ksUot-SeRXUVsZT6CbHioysnupDkCN9aaJM">
-    
-    <link rel="canonical" href="https://www.yourwebsite.com/">
+    <meta property="og:image" content="https://liouyuting112.github.io/dog/images/share.webp" />
+    <link rel="canonical" href="https://liouyuting112.github.io/dog/">
     <link rel="stylesheet" href="css/style.css">
     
     <script type="application/ld+json">
     {
-      "@context": "https://schema.org",
-      "@type": "WebSite",
-      "name": "銀髮毛孩守護站",
-      "url": "https://www.yourwebsite.com/",
-      "potentialAction": {
-        "@type": "SearchAction",
-        "target": "https://www.yourwebsite.com/search?q={search_term_string}",
-        "query-input": "required name=search_term_string"
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "銀髮毛孩守護站 - 專業老犬照顧與健康指南",
+    "url": "https://liouyuting112.github.io/dog/",
+    "potentialAction": {
+    "@type": "SearchAction",
+    "target": "https://liouyuting112.github.io/dog/search?q={search_term_string}", 
+    "query-input": "required name=search_term_string"
       }
     }
     </script>
@@ -75,6 +74,4 @@
     </footer>
     <script src="js/main.js"></script>
 </body>
-
 </html>
-
